--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:style": "stylelint 'src/app/**/*{.css,.scss}'",
     "lint:js": "ng lint",
     "lint:html": "htmllint src/**/*.html",
+    "lint:autofix": "ng lint --fix && stylelint 'src/app/**/*{.css,.scss}' --fix",
     "lh": "lighthouse-ci",
     "e2e": "ng e2e"
   },
@@ -54,6 +55,7 @@
     "stylelint-config-recommended": "^2.1.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
+    "tslint-config-airbnb": "^5.8.0",
     "typescript": "^2.6.2"
   }
 }
