--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
+    "ghpages": "sh deploy.sh",
+    "deploy": "angular-cli-ghpages",
     "start": "ng serve",
     "build": "ng build --prod",
     "test": "ng test",
@@ -26,6 +28,7 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@types/jquery": "^3.3.1",
+    "angular-cli-ghpages": "^0.5.2",
     "angularfire2": "^5.0.0-rc.6",
     "core-js": "^2.4.1",
     "firebase": "^4.12.0",
@@ -42,6 +45,7 @@
     "@types/node": "~9.6.0",
     "babel-eslint": "^8.2.2",
     "codelyzer": "^4.0.1",
+    "gh-pages": "^1.1.0",
     "htmllint-cli": "0.0.6",
     "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
